2008-09-13 Jens Tkotz <jens@peino.de> 1.5.9-svn-b25

 * Fix: Better handling the case when an invalid, or borken image
        was uploaded.

 * CHANGE: Album::getPerm now returns true anytime for admins.
           This is better then adding a check to every single permission
           check like introduced in 1.5.9-svn-b4           

 * CHANGE: Reverted to former 1.5.8 behaviour for album deletion.
           Owners can always delete their own albums.

 * Change: For better convinience,
           tell the user how much files are invalid in an archive.
           In Gallery Remote this info is given in debug mode only.

 * Fix: In windows fs_is_link showed a PHP notice when the checked file is
        no link. Suppress this notice like done for *nix Systems.

 * Change: Code cleanup, indenting etc.

2008-09-09 Jens Tkotz <jens@peino.de> 1.5.9-svn-b24

 * Change: Removed tools/build_manifest.php

 * CHANGE: Reverted a change done in 1.5.9-svn-b4

   - Still allow that owner can ALWAY delete items from their albums.

 * New: Method Colors::getLighten()

 * Fix: Some wording, indenting

 * Removed: function contextHelp() ; Sorry Andrew.
 

2008-09-08 Jens Tkotz <jens@peino.de> 1.5.9-svn-b23

 * Fix: translation domain wrong in lib/stats.php

   Thanks to Niels Baggesen.


2008-09-04 Jens Tkotz <jens@peino.de> 1.5.9-svn-b22

 * Fix: &amp; in new Password link caused a invalid request message.


2008-09-04 Jens Tkotz <jens@peino.de> 1.5.9-svn-b21

 * Fix: Added missing function in lib/album.php


2008-09-03 Jens Tkotz <jens@peino.de> 1.5.9-svn-b20

 * FIX: Move and reorder for main albums were gone ?!?

 * Fix: Typo in stats.header

   Thanks to Piploff from forum for reporting these bugs.

 * Fix: Mail-links to owner in stats were bad HTML.

 * Change: Use gSubmit in find_orphans.php 

 * Change: Increased length for albumnames that get truncated in
           select boxes for reorder and move.

 * Fix: Get only albumcommand for rootalbums on mainpage.

